--- a/gitApp/app/src/main/res/layout/activity_main.xml
+++ b/gitApp/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,13 @@
     <data>
         <variable
             name="viewModel"
-            type="com.hugo.gitapp.presentation.MainViewModel" />
+            type="com.hugo.gitapp.view.MainViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.MainActivity">
+        tools:context=".presentation.activity.MainActivity">
 
         <ProgressBar
             android:id="@+id/progressbar"
@@ -29,6 +29,7 @@
             android:id="@+id/recyclerRepository"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+
             app:layout_constraintTop_toBottomOf="@id/progressbar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
