--- a/gitApp/app/src/main/res/layout/item_repository.xml
+++ b/gitApp/app/src/main/res/layout/item_repository.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:layout_gravity="center"
-        android:padding="10dp">
+        android:padding="12dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -128,5 +128,13 @@
         </LinearLayout>
 
     </LinearLayout>
+
+    <View
+        android:layout_gravity="bottom"
+        android:layout_width="match_parent"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:background="#CFCFCF"
+        android:layout_height="1dp"/>
 
 </androidx.cardview.widget.CardView>
