--- a/gitApp/app/src/main/res/layout/activity_details.xml
+++ b/gitApp/app/src/main/res/layout/activity_details.xml
@@ -20,6 +20,7 @@
             android:layout_height="wrap_content"
             android:background="#E8E8E8"
             android:orientation="horizontal"
+            android:gravity="center"
             android:padding="10dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -43,7 +44,7 @@
                 android:background="@drawable/rounded_corner"
                 android:textColor="@android:color/black"
                 android:padding="5dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:textSize="14dp"
                 android:textStyle="bold"
                 android:text="Closed" />
@@ -56,7 +57,7 @@
                 android:backgroundTint="@color/blueAccent"
                 android:textColor="@android:color/white"
                 android:padding="5dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="15dp"
                 android:textSize="14dp"
                 android:textStyle="bold"
                 android:text="All" />
